# bazel-ci-lab

./: .bazelrc  BUILD.bazel  MODULE.bazel  bazel-bazel_ci_lab  bazel-bin  bazel-out  bazel-testlogs  readme.md
.github/workflows/: ci.yml
src/math/: BUILD.bazel  calculator.h  calculator_test.cc
