module(
    name = "bazel_ci_lab",
    version = "0.1.0",
)

# C++ rules for Bazel 9.x cc_* rule loading.
bazel_dep(name = "rules_cc", version = "0.2.17")

# GoogleTest BCR-patched version.
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")

# Platform definitions for CI/platform examples.
bazel_dep(name = "platforms", version = "0.0.10")
